Closed Bug 1850457 Opened 1 year ago Closed 1 year ago

general.smoothScroll.pages = false does not work when scroll by mouse on scrollbar gutter in case of general.smoothScroll is enabled

Categories

(Core :: Layout: Scrolling and Overflow, defect)

Firefox 116
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
119 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox117 --- wontfix
firefox118 --- wontfix
firefox119 --- verified

People

(Reporter: alice0775, Assigned: rzvncj)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

Steps To Reproduce:

  1. set general.smoothScroll to true
  2. set general.smoothScroll.pages to false
  3. Open long page such as https://ftp.mozilla.org/pub/firefox/nightly/2023/01/2023-01-01-09-08-04-mozilla-central-l10n/
  4. Mouse down on scrollbar gutter and hold

Actual Results:
Scrolling appears smooth.

Expected results:
Page should scroll rough scrolling.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2267e2cb83212ad23130e6bc5f12b88eb2068cd0&tochange=22f915e74381a95195bd1f1b9cdc43d70fdcdf58

FYI,
Bug 1847716 did not fix this case.

:rzvncj, since you are the author of the regressor, bug 1331390, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(rzvncj)
Flags: needinfo?(rzvncj)

As per comment 7 in bug 1847716 this may be best left until bug 1840025 is fixed. Requesting info from :botond.

Flags: needinfo?(botond)

This is actually just a slight oversight in the fix for bug 1847716 -- the condition here should more precisely be StaticPrefs::general_smoothScroll() && StaticPrefs::general_smoothScroll_pages().

I would suggest making this tweak rather than waiting for bug 1840025 which is blocked on fixing a Mac-specific failure.

Razvan, would you like to make this tweak?

Flags: needinfo?(botond)

(In reply to Botond Ballo [:botond] from comment #3)

This is actually just a slight oversight in the fix for bug 1847716 -- the condition here should more precisely be StaticPrefs::general_smoothScroll() && StaticPrefs::general_smoothScroll_pages().

I would suggest making this tweak rather than waiting for bug 1840025 which is blocked on fixing a Mac-specific failure.

Razvan, would you like to make this tweak?

Sure, no problem.

Assignee: nobody → rzvncj
Status: NEW → ASSIGNED
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3cf6d303c236 Take general.smoothScroll.pages into account when scrolling by keeping the mouse pressed on the scrollbar. r=botond
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch

The patch landed in nightly and beta is affected.
:rzvncj, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox118 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(rzvncj)

(In reply to BugBot [:suhaib / :marco/ :calixte] from comment #8)

The patch landed in nightly and beta is affected.
:rzvncj, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox118 to wontfix.

For more information, please visit BugBot documentation.

Probably not, but as usual it's :botond's call.

Flags: needinfo?(rzvncj) → needinfo?(botond)

Yeah, I think this is enough of an edge case that we need not bother with an uplift.

Flags: needinfo?(botond)

Reproduced with Fx 116.0 on Windows 10.
Verified fixed with Fx 120.0a1(2023-10-01) and Fx 119.0b3 on Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: