Bug 1850457 - Take general.smoothScroll.pages into account when scrolling by keeping the mouse pressed on the scrollbar. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D187021