layout/xul/nsSliderFrame.cpp
@@ -1543,8 +1543,10 @@ void nsSliderFrame::PageScroll(bool aClickAndHold) {
     }
 
     sf->ScrollTo(pos,
-                 StaticPrefs::general_smoothScroll() ? ScrollMode::SmoothMsd
-                                                     : ScrollMode::Instant,
+                 StaticPrefs::general_smoothScroll() &&
+                         StaticPrefs::general_smoothScroll_pages()
+                     ? ScrollMode::SmoothMsd
+                     : ScrollMode::Instant,
                  nullptr, scrollSnapFlags);
 
     return;
